--- a/frontend/styles/styles.module.css
+++ b/frontend/styles/styles.module.css
@@ -1,2 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Mukta&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800&display=swap");
+
+.horizontalCardCarousel::-webkit-scrollbar {
+  display: none;
+}
